--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -5,6 +5,7 @@ SecondPageName=Products Details
 TherdPage=Product details
 ByttonCreate=Create
 ByttonSave=Save
+ByttonEdit=Edit
 ByttonDelete=Delete
 ButtonSend=Send
 ButtonClose=Close
