--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -5,13 +5,14 @@ SecondPageName=Products Details
 TherdPage=Product details
 ByttonCreate=Create
 ByttonSave=Save
+ByttonEdit=Edit
 ByttonDelete=Delete
 ButtonSend=Send
 ButtonClose=Close
 PlaceholderSerch=Search...
 PlaceholderSerchProduct=Enter value to search...
 PopupStoreTitle=Create new store
-PopupProductTitle=Create product
+PopupProductTitle=Create new product
 PopupProductTitleEdit=Edit product
 Name=Name
 PlaceholderFieldName=Enter Name...
