--- a/i18n/i18n_en.properties
+++ b/i18n/i18n_en.properties
@@ -4,8 +4,10 @@ FirstPageName=Products Overview
 SecondPageName=Products Details
 TherdPage=Product details
 ByttonCreate=Create
+ByttonAdd=Add
 ByttonSave=Save
 ByttonEdit=Edit
+ByttonRemove=Remove
 ByttonDelete=Delete
 ButtonSend=Send
 ButtonClose=Close
