refactor complete filters

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -6,9 +6,9 @@ TherdPage=Product details
 ByttonCreate=Create
 ByttonAdd=Add
 ByttonSave=Save
-ByttonEdit=Edit
+ButtonEdit=Edit
 ByttonRemove=Remove
-ByttonDelete=Delete
+ButtonDelete=Delete
 ButtonSend=Send
 ButtonClose=Close
 PlaceholderSerch=Search...
